feat: added watcher functionality

--- a/index.html
+++ b/index.html
@@ -432,6 +432,9 @@
           Upload files to remove sensitive metadata and download cleaned
           versions
         </div>
+        <div class="watcher">
+          <a href="./watcher.html">Watcher</a>
+        </div>
       </header>
 
       <div class="main-content">
